# advent-of-code-2024

./: .gitignore  Cargo.toml  README.md  bench.sh
.github/workflows/: rust.yml
benches/: benchmark_aoc.rs
src/: lib.rs  main.rs
src/implementation/: eight.rs  eighteen.rs  eleven.rs  example.rs  fifteen.rs  five.rs  four.rs  fourteen.rs  mod.rs  nine.rs  nineteen.rs  one.rs  seven.rs  seventeen.rs  six.rs  sixteen.rs  ten.rs  thirteen.rs  three.rs  twelve.rs  twenty.rs  twenty_four.rs  twenty_one.rs  twenty_three.rs  twenty_two.rs  two.rs
